--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,13 +14,17 @@ keywords = {Heat conduction, Deep learning, Image-based algorithm, Convolutional
 abstract = {This paper presents a data-driven approach to solve heat conduction problems, in particular 2D heat conduction problems. The physical laws which govern such problems are modeled by partial differential equations. We examine temperature distributions of conductors that have square geometry subjected to various boundary conditions, both Dirichlet and Neumann. The data consists of images of these distributions in a semi-continuous form. Conventionally, such problems may be solved analytically or using numerical methods which can be computationally expensive. We attempt to use Image-Based Deep Learning algorithms such as encoder-decoders and variational auto-encoders which do not involve the physical laws of the problem. We also study the efficacy of deterministic models against probabilistic models and the feasibility of using image-based deep-learning methods for engineering applications.}
 }
 
-@INPROCEEDINGS{9838132,
-  author={Tadeparti, Sidharth and K B, Devika and Subramanian, Shankar C},
+@INPROCEEDINGS{10178412,
+  author={Tadeparti, Sidharth and Devika, K. B. and Subramanian, Shankar C.},
   booktitle={2023 European Control Conference (ECC)}, 
-  title={Computationally Efficient Model Predictive Control for Truck Platooning}, 
+  title={Computationally Efficient Non-linear Model Predictive Control for Truck Platoons}, 
   year={2023},
   volume={},
   number={},
   pages={1-6},
-  doi={}}
+  doi={},
+  url = {https://ieeexplore.ieee.org/abstract/document/10178412},
+  abstract = {A truck platoon consists of several trucks moving together at high speeds with relatively small inter-vehicular spacing. In platoon formations, a key trade-off exists between energy efficiency that depends on the inter-vehicular spacing and safety that is related to the stability of the platoon. In an attempt to capture this trade-off, non-linear model predictive control has been proposed, considering detailed dynamics of on-road truck operation. The non-linear optimization problem that manifests has been solved numerically using the CasADi optimal control framework. The controller capabilities to establish stable platooning have been evaluated for typical accelerating and decelerating maneuvers and for a realistic heavy duty highway drive cycle. The computational efficiency of the approach and its efficacy for real time use have also been studied.}
+
+}
 
